Fixed issue with navigation bar on mobile.
Navigation bar now works both on press and hover so mobile devices can
use it.

--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
 	font: 12px Tahoma, Arial;
 }
 
-#jsddm li a {
+#jsddm li a, li.no_link, li.dummy {
 	display: block;
 	background: #324143;
 	padding: 5px 12px;
@@ -114,7 +114,7 @@ body {
 	height: 40px;
 }
 
-#wrap {
+#tabs {
 	width: 90%;
 	margin: 5px;
 }
